logs/dag_id=Weather_DAG_V4.2/run_id=scheduled__2024-02-12T011100+0000/task_id=data_to_db/attempt=1.log
[2024-02-12T12:07:34.625+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Weather_DAG_V4.2.data_to_db scheduled__2024-02-12T01:11:00+00:00 [queued]>
[2024-02-12T12:07:34.663+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Weather_DAG_V4.2.data_to_db scheduled__2024-02-12T01:11:00+00:00 [queued]>
[2024-02-12T12:07:34.664+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 1
[2024-02-12T12:07:34.731+0000] {taskinstance.py:2191} INFO - Executing <Task(PostgresOperator): data_to_db> on 2024-02-12 01:11:00+00:00
[2024-02-12T12:07:34.746+0000] {standard_task_runner.py:60} INFO - Started process 11092 to run task
[2024-02-12T12:07:34.761+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'Weather_DAG_V4.2', 'data_to_db', 'scheduled__2024-02-12T01:11:00+00:00', '--job-id', '8307', '--raw', '--subdir', 'DAGS_FOLDER/Weather_dag.py', '--cfg-path', '/tmp/tmppwwlreta']
[2024-02-12T12:07:34.769+0000] {standard_task_runner.py:88} INFO - Job 8307: Subtask data_to_db
[2024-02-12T12:07:34.907+0000] {task_command.py:423} INFO - Running <TaskInstance: Weather_DAG_V4.2.data_to_db scheduled__2024-02-12T01:11:00+00:00 [running]> on host 06573eafe810
[2024-02-12T12:07:35.225+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='Weather_DAG_V4.2' AIRFLOW_CTX_TASK_ID='data_to_db' AIRFLOW_CTX_EXECUTION_DATE='2024-02-12T01:11:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-02-12T01:11:00+00:00'
[2024-02-12T12:07:35.232+0000] {sql.py:276} INFO - Executing: 
        LOAD DATA INFILE weather.csv 
        INTO TABLE weather_tab 
        FIELDS TERMINATED BY ',' 
        ENCLOSED BY '"'
        LINES TERMINATED BY 'n'
        IGNORE 1 ROWS
        
[2024-02-12T12:07:35.244+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-02-12T12:07:35.273+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-02-12T12:07:35.296+0000] {sql.py:450} INFO - Running statement: 
        LOAD DATA INFILE weather.csv 
        INTO TABLE weather_tab 
        FIELDS TERMINATED BY ',' 
        ENCLOSED BY '"'
        LINES TERMINATED BY 'n'
        IGNORE 1 ROWS
        , parameters: None
[2024-02-12T12:07:35.307+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 398, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 455, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "DATA"
LINE 2:         LOAD DATA INFILE weather.csv 
                     ^

[2024-02-12T12:07:35.322+0000] {taskinstance.py:1138} INFO - Marking task as FAILED. dag_id=Weather_DAG_V4.2, task_id=data_to_db, execution_date=20240212T011100, start_date=20240212T120734, end_date=20240212T120735
[2024-02-12T12:07:35.358+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 8307 for task data_to_db (syntax error at or near "DATA"
LINE 2:         LOAD DATA INFILE weather.csv 
                     ^
; 11092)
[2024-02-12T12:07:35.401+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-02-12T12:07:35.425+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
